--- a/education.html
+++ b/education.html
@@ -36,48 +36,62 @@
     </div>
   </nav>
 
-  <!-- Journey Section -->
-  <section class="journey">
+  <!-- Education Section -->
+  <section class="education">
     <div class="container">
       <h1 class="section-title">
         My <span class="gradient-text">Education</span>
       </h1>
       <div class="timeline-container">
         <div class="timeline">
+          <!-- ITP Tech Trainee (Latest) -->
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
-                  <i class="fas fa-graduation-cap"></i>
+                  <i class="fas fa-building"></i>
                 </div>
                 <div>
-                  <h3>Bachelor of Computer Science</h3>
-                  <p class="institution">India</p>
+                  <h3>ITP Tech Trainee</h3>
+                  <p class="institution">ING Bank, Amsterdam</p>
                 </div>
-                <span class="timeline-date">Apr 2017 - Apr 2021</span>
+                <span class="timeline-date">Oct 2024 - Present</span>
               </div>
-              <p>Started my academic journey in Computer Science, building a strong foundation in programming, algorithms, and software development principles.</p>
+              <p>Joined ING Bank as an ITP Tech Trainee, working on innovative financial technology solutions in the heart of Amsterdam's tech scene.</p>
             </div>
           </div>
 
+          <!-- Master's Degree (Joint) -->
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <div class="timeline-header">
-                <div class="timeline-icon">
-                  <i class="fas fa-briefcase"></i>
-                </div>
+                                  <div class="timeline-icon">
+                   <i class="fas fa-university"></i>
+                  </div>
                 <div>
-                  <h3>Internship at Cognizant</h3>
-                  <p class="institution">Cognizant Technology Solutions</p>
+                  <h3>Master of Science (MSc), Computer Science - Internet and Web Technology (Joint Degree)</h3>
+                  <p class="institution">University of Amsterdam (UvA) & Vrije Universiteit Amsterdam (VU)</p>
                 </div>
-                <span class="timeline-date">Apr 2021 - Jul 2021</span>
+                <span class="timeline-date">Aug 2022 - Aug 2024</span>
               </div>
-              <p>Immediately after graduation, joined Cognizant as an intern, gaining hands-on experience in enterprise software development and corporate work culture.</p>
+              <p>Completed a joint MSc in Computer Science with a specialization in Internet and Web Technology, focusing on distributed systems, cloud computing, and network programming.</p>
+              <div class="thesis-button-container">
+                <a 
+                  href="https://github.com/Aditya746/self_site/blob/44b00855b422594c848d7398b517d59593fd37af/Msc_thesis_Aditya.pdf" 
+                  class="thesis-btn" 
+                  target="_blank"
+                  title="View Master's Thesis"
+                >
+                  <i class="fas fa-file-pdf"></i>
+                  View Thesis
+                </a>
+              </div>
             </div>
           </div>
 
+          <!-- Full-time Software Engineer -->
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
@@ -95,37 +109,57 @@
             </div>
           </div>
 
+          <!-- Internship at Cognizant -->
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
-                  <i class="fas fa-graduation-cap"></i>
+                  <i class="fas fa-briefcase"></i>
                 </div>
                 <div>
-                  <h3>Master's Degree</h3>
-                  <p class="institution">Netherlands</p>
+                  <h3>Internship at Cognizant</h3>
+                  <p class="institution">Cognizant Technology Solutions</p>
                 </div>
-                <span class="timeline-date">Aug 2022 - Aug 2024</span>
+                <span class="timeline-date">Apr 2021 - Jul 2021</span>
               </div>
-              <p>Pursued advanced studies in the Netherlands, expanding my knowledge in cutting-edge technologies and international academic environment.</p>
+              <p>Immediately after graduation, joined Cognizant as an intern, gaining hands-on experience in enterprise software development and corporate work culture.</p>
             </div>
           </div>
 
+          <!-- Bachelor of Technology -->
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <div class="timeline-header">
-                <div class="timeline-icon">
-                  <i class="fas fa-building"></i>
-                </div>
+                                 <div class="timeline-icon">
+                   <i class="fas fa-graduation-cap"></i>
+                 </div>
                 <div>
-                  <h3>ITP Tech Trainee</h3>
-                  <p class="institution">ING Bank, Amsterdam</p>
+                  <h3>Bachelor of Technology (BTech), Computer Software Engineering</h3>
+                  <p class="institution">Lovely Professional University, India</p>
                 </div>
-                <span class="timeline-date">Oct 2024 - Present</span>
+                <span class="timeline-date">2017 - 2021</span>
               </div>
-              <p>Joined ING Bank as an ITP Tech Trainee, working on innovative financial technology solutions in the heart of Amsterdam's tech scene.</p>
+              <p>Completed BTech in Computer Software Engineering, building a strong foundation in programming, databases, and software development principles.</p>
+            </div>
+          </div>
+
+          <!-- Higher Secondary -->
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <div class="timeline-header">
+                                 <div class="timeline-icon">
+                   <i class="fas fa-school"></i>
+                 </div>
+                <div>
+                  <h3>Higher Secondary, Mathematics and Science</h3>
+                  <p class="institution">Modern Sandeepni School, India</p>
+                </div>
+                <span class="timeline-date">2015 - 2017</span>
+              </div>
+              <p>Completed Higher Secondary education with a focus on Mathematics and Science.</p>
             </div>
           </div>
         </div>
@@ -143,9 +177,8 @@
           <p>Made with <i class="fas fa-heart"></i> by Aditya Srivastava</p>
         </div>
         <div class="footer-social">
-          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/adityans17/" class="social-link" target="_blank" title="Connect on LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Aditya746" class="social-link" target="_blank" title="View GitHub Profile"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -154,3 +187,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
