--- a/education.html
+++ b/education.html
@@ -12,22 +12,24 @@
   <!-- Navigation -->
   <nav class="navbar">
     <div class="nav-container">
-      <ul class="nav-menu">
+      <ul class="nav-menu centered-menu">
         <li><a href="index.html#home" class="nav-link">Home</a></li>
         <li><a href="index.html#about" class="nav-link">About</a></li>
         <li><a href="index.html#skills" class="nav-link">Skills</a></li>
         <li><a href="experience.html" class="nav-link">Experience</a></li>
         <li><a href="education.html" class="nav-link active">Education</a></li>
-        <li><a href="index.html#contact" class="nav-link">Contact</a></li>
       </ul>
-      <a
-        href="https://www.linkedin.com/in/adityans17/"
-        class="linkedin-btn"
-        target="_blank"
-        title="Connect on LinkedIn"
-      >
-        <i class="fab fa-linkedin"></i>
-      </a>
+      <div class="nav-actions">
+        <a
+          href="https://www.linkedin.com/in/adityans17/"
+          class="linkedin-btn"
+          target="_blank"
+          title="Connect on LinkedIn"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="index.html#contact" class="btn btn-primary contact-top-btn">Contact</a>
+      </div>
       <div class="hamburger">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -79,7 +81,7 @@
               <p>Completed a joint MSc in Computer Science with a specialization in Internet and Web Technology, focusing on distributed systems, cloud computing, and network programming.</p>
               <div class="thesis-button-container">
                 <a 
-                  href="https://github.com/Aditya746/self_site/blob/44b00855b422594c848d7398b517d59593fd37af/Msc_thesis_Aditya.pdf" 
+                  href="Msc_thesis_Aditya.pdf" 
                   class="thesis-btn" 
                   target="_blank"
                   title="View Master's Thesis"
