--- a/experience.html
+++ b/experience.html
@@ -12,22 +12,24 @@
   <!-- Navigation -->
   <nav class="navbar">
     <div class="nav-container">
-      <ul class="nav-menu">
+      <ul class="nav-menu centered-menu">
         <li><a href="index.html#home" class="nav-link">Home</a></li>
         <li><a href="index.html#about" class="nav-link">About</a></li>
         <li><a href="index.html#skills" class="nav-link">Skills</a></li>
         <li><a href="experience.html" class="nav-link active">Experience</a></li>
         <li><a href="education.html" class="nav-link">Education</a></li>
-        <li><a href="index.html#contact" class="nav-link">Contact</a></li>
       </ul>
-      <a
-        href="https://www.linkedin.com/in/adityans17/"
-        class="linkedin-btn"
-        target="_blank"
-        title="Connect on LinkedIn"
-      >
-        <i class="fab fa-linkedin"></i>
-      </a>
+      <div class="nav-actions">
+        <a
+          href="https://www.linkedin.com/in/adityans17/"
+          class="linkedin-btn"
+          target="_blank"
+          title="Connect on LinkedIn"
+        >
+          <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="index.html#contact" class="btn btn-primary contact-top-btn">Contact</a>
+      </div>
       <div class="hamburger">
         <span class="bar"></span>
         <span class="bar"></span>
