--- a/education.html
+++ b/education.html
@@ -15,9 +15,9 @@
       <ul class="nav-menu centered-menu">
         <li><a href="index.html#home" class="nav-link">Home</a></li>
         <li><a href="index.html#about" class="nav-link">About</a></li>
-        <li><a href="index.html#skills" class="nav-link">Skills</a></li>
         <li><a href="experience.html" class="nav-link">Experience</a></li>
         <li><a href="education.html" class="nav-link active">Education</a></li>
+        <li><a href="certifications.html" class="nav-link">Certifications</a></li>
       </ul>
       <div class="nav-actions">
         <a
@@ -41,42 +41,24 @@
   <!-- Education Section -->
   <section class="education">
     <div class="container">
-      <h1 class="section-title">
+      <h1 class="section-title animate-on-load">
         My <span class="gradient-text">Education</span>
       </h1>
       <div class="timeline-container">
         <div class="timeline">
-          <!-- ITP Tech Trainee (Latest) -->
-          <div class="timeline-item">
+          <!-- Master's Degree (Joint) -->
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.2s;">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
-                  <i class="fas fa-building"></i>
+                  <i class="fas fa-university"></i>
                 </div>
-                <div>
-                  <h3>ITP Tech Trainee</h3>
-                  <p class="institution">ING Bank, Amsterdam</p>
-                </div>
-                <span class="timeline-date">Oct 2024 - Present</span>
-              </div>
-              <p>Joined ING Bank as an ITP Tech Trainee, working on innovative financial technology solutions in the heart of Amsterdam's tech scene.</p>
-            </div>
-          </div>
-
-          <!-- Master's Degree (Joint) -->
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-              <div class="timeline-header">
-                                  <div class="timeline-icon">
-                   <i class="fas fa-university"></i>
-                  </div>
-                <div>
+                <div class="timeline-info">
                   <h3>Master of Science (MSc), Computer Science - Internet and Web Technology (Joint Degree)</h3>
                   <p class="institution">University of Amsterdam (UvA) & Vrije Universiteit Amsterdam (VU)</p>
+                  <span class="timeline-date">Aug 2022 - Aug 2024</span>
                 </div>
-                <span class="timeline-date">Aug 2022 - Aug 2024</span>
               </div>
               <p>Completed a joint MSc in Computer Science with a specialization in Internet and Web Technology, focusing on distributed systems, cloud computing, and network programming.</p>
               <div class="thesis-button-container">
@@ -93,73 +75,37 @@
             </div>
           </div>
 
-          <!-- Full-time Software Engineer -->
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-              <div class="timeline-header">
-                <div class="timeline-icon">
-                  <i class="fas fa-user-tie"></i>
-                </div>
-                <div>
-                  <h3>Full-time Software Engineer</h3>
-                  <p class="institution">Cognizant Technology Solutions</p>
-                </div>
-                <span class="timeline-date">Jul 2021 - Jul 2022</span>
-              </div>
-              <p>Transitioned to full-time role, working on real-world projects, collaborating with teams, and developing professional software engineering skills.</p>
-            </div>
-          </div>
-
-          <!-- Internship at Cognizant -->
-          <div class="timeline-item">
-            <div class="timeline-dot"></div>
-            <div class="timeline-content">
-              <div class="timeline-header">
-                <div class="timeline-icon">
-                  <i class="fas fa-briefcase"></i>
-                </div>
-                <div>
-                  <h3>Internship at Cognizant</h3>
-                  <p class="institution">Cognizant Technology Solutions</p>
-                </div>
-                <span class="timeline-date">Apr 2021 - Jul 2021</span>
-              </div>
-              <p>Immediately after graduation, joined Cognizant as an intern, gaining hands-on experience in enterprise software development and corporate work culture.</p>
-            </div>
-          </div>
-
           <!-- Bachelor of Technology -->
-          <div class="timeline-item">
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.4s;">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <div class="timeline-header">
-                                 <div class="timeline-icon">
-                   <i class="fas fa-graduation-cap"></i>
-                 </div>
-                <div>
+                <div class="timeline-icon">
+                  <i class="fas fa-graduation-cap"></i>
+                </div>
+                <div class="timeline-info">
                   <h3>Bachelor of Technology (BTech), Computer Software Engineering</h3>
                   <p class="institution">Lovely Professional University, India</p>
+                  <span class="timeline-date">2017 - 2021</span>
                 </div>
-                <span class="timeline-date">2017 - 2021</span>
               </div>
               <p>Completed BTech in Computer Software Engineering, building a strong foundation in programming, databases, and software development principles.</p>
             </div>
           </div>
 
           <!-- Higher Secondary -->
-          <div class="timeline-item">
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.6s;">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <div class="timeline-header">
-                                 <div class="timeline-icon">
-                   <i class="fas fa-school"></i>
-                 </div>
-                <div>
+                <div class="timeline-icon">
+                  <i class="fas fa-school"></i>
+                </div>
+                <div class="timeline-info">
                   <h3>Higher Secondary, Mathematics and Science</h3>
                   <p class="institution">Modern Sandeepni School, India</p>
+                  <span class="timeline-date">2015 - 2017</span>
                 </div>
-                <span class="timeline-date">2015 - 2017</span>
               </div>
               <p>Completed Higher Secondary education with a focus on Mathematics and Science.</p>
             </div>
@@ -167,7 +113,6 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <!-- Footer -->
