--- a/experience.html
+++ b/experience.html
@@ -15,9 +15,9 @@
       <ul class="nav-menu centered-menu">
         <li><a href="index.html#home" class="nav-link">Home</a></li>
         <li><a href="index.html#about" class="nav-link">About</a></li>
-        <li><a href="index.html#skills" class="nav-link">Skills</a></li>
         <li><a href="experience.html" class="nav-link active">Experience</a></li>
         <li><a href="education.html" class="nav-link">Education</a></li>
+        <li><a href="certifications.html" class="nav-link">Certifications</a></li>
       </ul>
       <div class="nav-actions">
         <a
@@ -41,119 +41,116 @@
   <!-- Experience Timeline -->
   <section class="experience">
     <div class="container">
-      <h1 class="section-title">
+      <h1 class="section-title animate-on-load">
         My <span class="gradient-text">Experience</span>
       </h1>
-      <div class="timeline">
-        <!-- ING - Business Manager -->
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <div class="timeline-icon"><i class="fas fa-briefcase"></i></div>
-              <div>
-                <h3>Business Manager</h3>
-                <p class="institution">ING, Amsterdam, Netherlands (Hybrid)</p>
+      <div class="timeline-container">
+        <div class="timeline">
+          <!-- ING - ITP Tech Trainee (Main Experience) -->
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.1s;">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <div class="timeline-header">
+                <div class="timeline-icon"><i class="fas fa-user-graduate"></i></div>
+                <div class="timeline-info">
+                  <h3>International Talent Programme (ITP) | Tech</h3>
+                  <p class="institution">ING, Amsterdam, Netherlands (Hybrid)</p>
+                  <span class="timeline-date">Oct 2024 - Present</span>
+                </div>
               </div>
-              <span class="timeline-date">Apr 2025 - Present</span>
+              <p>A global management traineeship aimed at developing the future leaders of ING.</p>
+              
+              <!-- Sub-experiences under ITP -->
+              <div class="sub-experiences">
+                <!-- Business Manager Role -->
+                <div class="sub-experience-item">
+                  <div class="sub-experience-header">
+                    <div class="sub-icon"><i class="fas fa-briefcase"></i></div>
+                    <div class="sub-info">
+                      <h4>Business Manager</h4>
+                      <span class="sub-date">Apr 2025 - Present</span>
+                    </div>
+                  </div>
+                  <p>Business Manager for CIO Wholesale Banking Tech EMEA & UK.</p>
+                </div>
+                
+                <!-- Data Analyst Role -->
+                <div class="sub-experience-item">
+                  <div class="sub-experience-header">
+                    <div class="sub-icon"><i class="fas fa-database"></i></div>
+                    <div class="sub-info">
+                      <h4>Data Analyst</h4>
+                      <span class="sub-date">Oct 2024 - Mar 2025</span>
+                    </div>
+                  </div>
+                  <p>Worked as a Data Analyst in the Data Management Tribe at Domestic Bank NL. Contributed to the Platform Health initiative which determined 'health' of the IT Assets from a performance, business and risk perspective, enabling IT Area and Product Leads to view, gather, and evaluate the status of their IT Assets more effectively.</p>
+                </div>
+              </div>
             </div>
-            <p>Business Manager for CIO Wholesale Banking Tech EMEA & UK.</p>
           </div>
-        </div>
 
-        <!-- ING - ITP Tech Trainee -->
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <div class="timeline-icon"><i class="fas fa-user-graduate"></i></div>
-              <div>
-                <h3>International Talent Programme (ITP) | Tech</h3>
-                <p class="institution">ING, Amsterdam, Netherlands (Hybrid)</p>
+          <!-- Cognizant - Programmer Analyst -->
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.2s;">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <div class="timeline-header">
+                <div class="timeline-icon"><i class="fas fa-laptop-code"></i></div>
+                <div class="timeline-info">
+                  <h3>Programmer Analyst</h3>
+                  <p class="institution">Cognizant Technology Solutions, Pune, India </p>
+                  <span class="timeline-date">Sep 2021 - Jul 2022</span>
+                </div>
               </div>
-              <span class="timeline-date">Oct 2024 - Present</span>
+              <p>End-to-end project development as a Full-Stack Engineer at Cognizant CDE division. Worked on the front end, back end and deployment of US-based client projects, utilising best code practices and Agile methodologies. Actively participated in code reviews, sought mentorship from senior developers, and fostered a culture of innovation within the team.</p>
             </div>
-            <p>A global management traineeship aimed at developing the future leaders of ING.</p>
           </div>
-        </div>
 
-        <!-- ING - Data Analyst -->
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <div class="timeline-icon"><i class="fas fa-database"></i></div>
-              <div>
-                <h3>Data Analyst</h3>
-                <p class="institution">ING, Amsterdam, Netherlands (Hybrid)</p>
+          <!-- Cognizant - Programmer Analyst Trainee -->
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.3s;">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <div class="timeline-header">
+                <div class="timeline-icon"><i class="fas fa-user"></i></div>
+                <div class="timeline-info">
+                  <h3>Programmer Analyst Trainee</h3>
+                  <p class="institution">Cognizant Technology Solutions, India</p>
+                  <span class="timeline-date">Mar 2021 - Aug 2021</span>
+                </div>
               </div>
-              <span class="timeline-date">Oct 2024 - Mar 2025</span>
+              <p>Learned and developed as an Intern enhanced features for web applications using the full MEAN stack (MongoDB, Express.js, Angular, Node.js), gaining proficiency in modern web development. Collaborated with a team of fellow computer engineers on real-world projects, honing teamwork and communication skills. Learned to optimize code for performance and scalability.</p>
             </div>
-            <p>Worked as a Data Analyst in the Data Management Tribe at Domestic Bank NL. Contributed to the Platform Health initiative which determined 'health' of the IT Assets from a Performance, Business and Risk perspective, enabling IT Area and Product Leads to view, gather, and evaluate the status of their IT Assets more effectively.</p>
           </div>
-        </div>
 
-        <!-- Cognizant - Programmer Analyst -->
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <div class="timeline-icon"><i class="fas fa-laptop-code"></i></div>
-              <div>
-                <h3>Programmer Analyst</h3>
-                <p class="institution">Cognizant, Pune, India</p>
+          <!-- upGrad - Digital Marketing Intern -->
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.4s;">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <div class="timeline-header">
+                <div class="timeline-icon"><i class="fas fa-bullhorn"></i></div>
+                <div class="timeline-info">
+                  <h3>Digital Marketing Intern</h3>
+                  <p class="institution">upGrad, India</p>
+                  <span class="timeline-date">Apr 2020 - Sep 2020</span>
+                </div>
               </div>
-              <span class="timeline-date">Sep 2021 - Jul 2022</span>
+              <p>Learned, executed, and managed strategic advertising campaigns for upGrad Live and upGrad.com leveraging Google Ads and Facebook Ad Manager. Delivered measurable results by employing data-driven insights, A/B testing, and precise targeting, resulting in 35% traffic growth and heightened brand exposure. Successfully optimized ad campaigns to boost click-through and conversion rates, consistently exceeding sales and exposure targets.</p>
             </div>
-            <p>End-to-end project development as a Full-Stack Engineer at Cognizant CDE division. Worked on the front end, back end and deployment of US-based client projects, utilising best code practices and Agile methodologies. Actively participated in code reviews, sought mentorship from senior developers, and fostered a culture of innovation within the team.</p>
           </div>
-        </div>
 
-        <!-- Cognizant - Programmer Analyst Trainee -->
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <div class="timeline-icon"><i class="fas fa-user"></i></div>
-              <div>
-                <h3>Programmer Analyst Trainee</h3>
-                <p class="institution">Cognizant (Remote)</p>
+          <!-- UPTEC - System Administrator Intern -->
+          <div class="timeline-item animate-timeline-item" style="animation-delay: 0.5s;">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <div class="timeline-header">
+                <div class="timeline-icon"><i class="fas fa-server"></i></div>
+                <div class="timeline-info">
+                  <h3>System Administrator Intern</h3>
+                  <p class="institution">UPTEC Computer Consultancy Ltd., Lucknow, India</p>
+                  <span class="timeline-date">May 2019 - Jul 2019</span>
+                </div>
               </div>
-              <span class="timeline-date">Mar 2021 - Aug 2021</span>
+              <p>Performed system administration tasks within OpenStack environments, including user management, resource allocation, and troubleshooting. Configured and managed hybrid cloud storage solutions, and gained hands-on experience with AWS, deploying and maintaining EC2 instances.</p>
             </div>
-            <p>Learned and developed as an Intern enhanced features for web applications using the full MEAN stack (MongoDB, Express.js, Angular, Node.js), gaining proficiency in modern web development. Collaborated with a team of fellow computer engineers on real-world projects, honing teamwork and communication skills. Learned to optimize code for performance and scalability.</p>
-          </div>
-        </div>
-
-        <!-- upGrad - Digital Marketing Intern -->
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <div class="timeline-icon"><i class="fas fa-bullhorn"></i></div>
-              <div>
-                <h3>Digital Marketing Intern</h3>
-                <p class="institution">upGrad (Remote)</p>
-              </div>
-              <span class="timeline-date">Apr 2020 - Sep 2020</span>
-            </div>
-            <p>Learned, executed, and managed strategic advertising campaigns for upGrad Live and upGrad.com leveraging Google Ads and Facebook Ad Manager. Delivered measurable results by employing data-driven insights, A/B testing, and precise targeting, resulting in 35% traffic growth and heightened brand exposure. Successfully optimized ad campaigns to boost click-through and conversion rates, consistently exceeding sales and exposure targets.</p>
-          </div>
-        </div>
-
-        <!-- UPTEC - System Administrator Intern -->
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-content">
-            <div class="timeline-header">
-              <div class="timeline-icon"><i class="fas fa-server"></i></div>
-              <div>
-                <h3>System Administrator Intern</h3>
-                <p class="institution">UPTEC Computer Consultancy Ltd., Lucknow, India</p>
-              </div>
-              <span class="timeline-date">May 2019 - Jul 2019</span>
-            </div>
-            <p>Performed system administration tasks within OpenStack environments, including user management, resource allocation, and troubleshooting. Configured and managed hybrid cloud storage solutions, and gained hands-on experience with AWS, deploying and maintaining EC2 instances.</p>
           </div>
         </div>
       </div>
@@ -169,9 +166,8 @@
           <p>Made with <i class="fas fa-heart"></i> by Aditya Srivastava</p>
         </div>
         <div class="footer-social">
-          <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
-          <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/adityans17/" class="social-link" target="_blank" title="Connect on LinkedIn"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/Aditya746" class="social-link" target="_blank" title="View GitHub Profile"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
