--- a/certifications.html
+++ b/certifications.html
@@ -58,7 +58,10 @@
                   <h3>Investment Foundations® Certificate</h3>
                   <p class="institution">CFA Institute</p>
                   <span class="timeline-date">Jun 2025</span>
-                  <span class="credential-id">Credential ID: 153501457</span>
+                  <a href="https://credentials.cfainstitute.org/4eb722b7-536f-45b1-aaa1-4b8e4207bc98#acc.TWgR49s1" target="_blank" class="credential-link">
+                    <i class="fas fa-external-link-alt"></i>
+                    Verify Credential
+                  </a>
                 </div>
               </div>
               <p>Professional certification in investment fundamentals and financial analysis principles.</p>
@@ -77,7 +80,10 @@
                   <h3>Digital Marketing</h3>
                   <p class="institution">upGrad</p>
                   <span class="timeline-date">Sep 2020</span>
-                  <span class="credential-id">Credential ID: 23624861</span>
+                  <a href="https://www.credential.net/034ed42a-edaa-426e-bf76-4a27aa0598fe#acc.omx2FMar" target="_blank" class="credential-link">
+                    <i class="fas fa-external-link-alt"></i>
+                    Verify Credential
+                  </a>
                 </div>
               </div>
               <p>Comprehensive digital marketing certification covering social media marketing, analytics, and campaign management.</p>
@@ -96,6 +102,10 @@
                   <h3>Google IT Support Professional Certificate</h3>
                   <p class="institution">Google</p>
                   <span class="timeline-date">Aug 2020</span>
+                  <a href="https://www.credly.com/badges/cea80690-0e94-4a9c-bb07-e028fe687496" target="_blank" class="credential-link">
+                    <i class="fas fa-external-link-alt"></i>
+                    Verify Credential
+                  </a>
                 </div>
               </div>
               <p>Professional IT support certification covering troubleshooting, customer service, networking, operating systems, and system administration.</p>
@@ -114,7 +124,10 @@
                   <h3>Google IT Support Specialization</h3>
                   <p class="institution">Google</p>
                   <span class="timeline-date">Aug 2020</span>
-                  <span class="credential-id">Credential ID: BEQGLKJ8KLE9</span>
+                  <a href="https://www.credly.com/badges/cea80690-0e94-4a9c-bb07-e028fe687496" target="_blank" class="credential-link">
+                    <i class="fas fa-external-link-alt"></i>
+                    Verify Credential
+                  </a>
                 </div>
               </div>
               <p>Advanced specialization in IT support with focus on technical troubleshooting and system administration.</p>
@@ -133,7 +146,10 @@
                   <h3>Financial Markets</h3>
                   <p class="institution">Yale University</p>
                   <span class="timeline-date">Jul 2020</span>
-                  <span class="credential-id">Credential ID: TGC4GK6DY27V</span>
+                  <a href="https://www.credly.com/badges/cea80690-0e94-4a9c-bb07-e028fe687496" target="_blank" class="credential-link">
+                    <i class="fas fa-external-link-alt"></i>
+                    Verify Credential
+                  </a>
                 </div>
               </div>
               <p>Comprehensive course on financial markets, investment strategies, and market analysis from Yale University.</p>
@@ -152,7 +168,10 @@
                   <h3>Marketing Analytics</h3>
                   <p class="institution">University of Virginia</p>
                   <span class="timeline-date">Jun 2020</span>
-                  <span class="credential-id">Credential ID: T8QWG4ZGEE7Y</span>
+                  <a href="https://www.coursera.org/account/accomplishments/verify/T8QWG4ZGEE7Y" target="_blank" class="credential-link">
+                    <i class="fas fa-external-link-alt"></i>
+                    Verify Credential
+                  </a>
                 </div>
               </div>
               <p>Advanced marketing analytics certification covering data-driven marketing strategies and performance measurement.</p>
@@ -171,6 +190,10 @@
                   <h3>EF SET Certificate</h3>
                   <p class="institution">EF SET</p>
                   <span class="timeline-date">Jul 2019</span>
+                  <a href="https://cert.efset.org/Y9bW1v" target="_blank" class="credential-link">
+                    <i class="fas fa-external-link-alt"></i>
+                    Verify Credential
+                  </a>
                 </div>
               </div>
               <p>English proficiency certification demonstrating advanced language skills for professional communication.</p>
