--- a/certifications.html
+++ b/certifications.html
@@ -48,7 +48,10 @@
         <div class="timeline">
           <!-- CFA Institute - Investment Foundations -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.1s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2025</div>
+              <div class="date-month">Jun</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -70,7 +73,10 @@
 
           <!-- upGrad - Digital Marketing -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.2s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2020</div>
+              <div class="date-month">Sep</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -92,7 +98,10 @@
 
           <!-- Google - IT Support Professional Certificate -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.3s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2020</div>
+              <div class="date-month">Aug</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -114,7 +123,10 @@
 
           <!-- Google - IT Support Specialization -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.4s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2020</div>
+              <div class="date-month">Aug</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -136,7 +148,10 @@
 
           <!-- Yale University - Financial Markets -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.5s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2020</div>
+              <div class="date-month">Jul</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -158,7 +173,10 @@
 
           <!-- University of Virginia - Marketing Analytics -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.6s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2020</div>
+              <div class="date-month">Jun</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -180,7 +198,10 @@
 
           <!-- EF SET - English Certificate -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.7s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2019</div>
+              <div class="date-month">Jul</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -202,7 +223,10 @@
 
           <!-- UPTEC - Red Hat OpenStack -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.8s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2019</div>
+              <div class="date-month">Jul</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -220,7 +244,10 @@
 
           <!-- NIIT Limited - Database Management -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.9s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker certifications-date-marker">
+              <div class="date-year">2018</div>
+              <div class="date-month">Jun</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
