--- a/education.html
+++ b/education.html
@@ -48,7 +48,10 @@
         <div class="timeline">
           <!-- Master's Degree (Joint) -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.2s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker">
+              <div class="date-year">2024</div>
+              <div class="date-month">Aug</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -77,7 +80,10 @@
 
           <!-- Bachelor of Technology -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.4s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker">
+              <div class="date-year">2021</div>
+              <div class="date-month">Jun</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
@@ -95,7 +101,10 @@
 
           <!-- Higher Secondary -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.6s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker">
+              <div class="date-year">2017</div>
+              <div class="date-month">May</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon">
