--- a/experience.html
+++ b/experience.html
@@ -48,17 +48,20 @@
         <div class="timeline">
           <!-- ING - ITP Tech Trainee (Main Experience) -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.1s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker experience-date-marker">
+              <div class="date-year">2025</div>
+              <div class="date-month">Apr</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon"><i class="fas fa-user-graduate"></i></div>
                 <div class="timeline-info">
                   <h3>International Talent Programme (ITP) | Tech</h3>
-                  <p class="institution">ING, Amsterdam, Netherlands (Hybrid)</p>
+                  <p class="institution">ING, Amsterdam, Netherlands </p>
                   <span class="timeline-date">Oct 2024 - Present</span>
                 </div>
               </div>
-              <p>A global management traineeship aimed at developing the future leaders of ING.</p>
+              <p>A two year global management traineeship aimed at developing the future leaders of ING.</p>
               
               <!-- Sub-experiences under ITP -->
               <div class="sub-experiences">
@@ -91,7 +94,10 @@
 
           <!-- Cognizant - Programmer Analyst -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.2s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker experience-date-marker">
+              <div class="date-year">2022</div>
+              <div class="date-month">Jul</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon"><i class="fas fa-laptop-code"></i></div>
@@ -107,7 +113,10 @@
 
           <!-- Cognizant - Programmer Analyst Trainee -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.3s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker experience-date-marker">
+              <div class="date-year">2021</div>
+              <div class="date-month">Aug</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon"><i class="fas fa-user"></i></div>
@@ -123,7 +132,10 @@
 
           <!-- upGrad - Digital Marketing Intern -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.4s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker experience-date-marker">
+              <div class="date-year">2020</div>
+              <div class="date-month">Sep</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon"><i class="fas fa-bullhorn"></i></div>
@@ -139,7 +151,10 @@
 
           <!-- UPTEC - System Administrator Intern -->
           <div class="timeline-item animate-timeline-item" style="animation-delay: 0.5s;">
-            <div class="timeline-dot"></div>
+            <div class="timeline-date-marker experience-date-marker">
+              <div class="date-year">2019</div>
+              <div class="date-month">Jul</div>
+            </div>
             <div class="timeline-content">
               <div class="timeline-header">
                 <div class="timeline-icon"><i class="fas fa-server"></i></div>
