--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <ul class="nav-menu centered-menu" aria-hidden="false">
         <li><a href="#home" class="nav-link">Home</a></li>
         <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="projects.html" class="nav-link">Projects</a></li>
         <li><a href="experience.html" class="nav-link">Experience</a></li>
         <li><a href="education.html" class="nav-link">Education</a></li>
         <li><a href="certifications.html" class="nav-link">Certifications</a></li>
@@ -180,32 +181,32 @@
       </h2>
       <div class="contact-content centered-contact">
         <div class="contact-info">
-          <h3 style="text-align:center;">Let's Connect</h3>
-          <p style="text-align:center;">Tech excites me, and I'm always up for a smart conversation—new ideas, great collaborations, or simply swapping thoughts on anything else.</p>
+          <h3 style="text-align:center;">Contact</h3>
+          <p style="text-align:center;">Tech excites me, and I'm always up for a conversation—new ideas, great collaborations, or simply swapping thoughts on anything else.</p>
           <div class="contact-items contact-items-centered">
             <div class="contact-item">
               <div class="contact-icon">
                 <i class="fas fa-envelope"></i>
               </div>
               <div>
-                <p class="contact-label">Personal Email</p>
+                <p class="contact-label">Personal</p>
                 <p class="contact-value">adityasrivastava746@gmail.com</p>
+                <button class="copy-btn" data-email="adityasrivastava746@gmail.com" title="Copy email">
+                  <i class="fas fa-copy"></i>
+                </button>
               </div>
-              <button class="copy-btn" data-email="adityasrivastava746@gmail.com" title="Copy email">
-                <i class="fas fa-copy"></i>
-              </button>
             </div>
             <div class="contact-item">
               <div class="contact-icon">
                 <i class="fas fa-briefcase"></i>
               </div>
               <div>
-                <p class="contact-label">Work Email</p>
+                <p class="contact-label">Work</p>
                 <p class="contact-value">aditya.srivastava@ing.com</p>
+                <button class="copy-btn" data-email="aditya.srivastava@ing.com" title="Copy email">
+                  <i class="fas fa-copy"></i>
+                </button>
               </div>
-              <button class="copy-btn" data-email="aditya.srivastava@ing.com" title="Copy email">
-                <i class="fas fa-copy"></i>
-              </button>
             </div>
             <div class="contact-social-row">
               <a href="https://www.linkedin.com/in/adityans17/" class="contact-social-btn" target="_blank" title="Connect on LinkedIn">
