--- a/education.html
+++ b/education.html
@@ -138,7 +138,7 @@
                 <div class="timeline-info">
                   <h3>Master of Science (MSc), Computer Science - Internet and Web Technology (Joint Degree)</h3>
                   <p class="institution">University of Amsterdam (UvA) & Vrije Universiteit Amsterdam (VU)</p>
-                  <span class="timeline-date">Aug 2022 - Aug 2024</span>
+                  <span class="timeline-date">2022 - 2024</span>
                 </div>
               </div>
               <p>Completed a joint MSc in Computer Science with a specialization in Internet and Web Technology, focusing on distributed systems, cloud computing, and network programming.</p>
