--- a/index.html
+++ b/index.html
@@ -138,35 +138,21 @@
             <img src="self_icon.jpeg" alt="Aditya Srivastava" class="profile-image" loading="lazy">
           </div>
           <div class="about-text">
-            <p>I'm a passionate Software Engineer at ING Bank, where I contribute to building secure and scalable systems in the financial sector. With a background in Computer Science, I thrive on solving complex problems with elegant code.</p>
-            <p>My expertise lies in crafting reliable solutions and collaborating in agile teams. I believe in writing clean, maintainable code that not only works but also delights users and fellow developers.</p>
+            <p>Hey there, I'm Aditya Srivastava, aka Adi 👋</p>
+            <p>Born and raised in India, now navigating life from Amsterdam, Netherlands. I'm 26 and, while IT engineering is what I do professionally, it's just one facet of who I am.</p>
+            <p>I'm endlessly curious—about how systems work, sure, but also about people, places, and stories. Whether I'm deep in a gaming session, sweating it out at the gym, or lost in the layered worlds of music and cinema, I'm fueled by a passion for new experiences that move and inspire me.</p>
+            <p>Travel keeps me grounded and open-minded, and I love how different cultures shift your perspective. I'm all about trying new things, even if it means failing and laughing through it.</p>
+            <p>As someone who appreciates latest in tech, I value thoughtful design—not just in what we build, but in how we live with it. Life's better when it's collaborative, creative, and just a little more adventurous. One day at a time.</p>
             <div class="about-tags">
-              <span class="tag"><i class="fas fa-shield-alt"></i> Security First</span>
+              <span class="tag"><i class="fas fa-shield-alt"></i> Technology</span>
               <span class="tag"><i class="fas fa-rocket"></i> Performance</span>
-              <span class="tag"><i class="fas fa-users"></i> Team Player</span>
+              <span class="tag"><i class="fas fa-users"></i> Management</span>
+              <span class="tag"><i class="fas fa-gamepad"></i> Gaming</span>
+              <span class="tag"><i class="fas fa-dumbbell"></i> Fitness</span>
+              <span class="tag"><i class="fas fa-music"></i> Music</span>
+              <span class="tag"><i class="fas fa-film"></i> Movies</span>
+              <span class="tag"><i class="fas fa-plane"></i> Travel</span>
             </div>
-          </div>
-        </div>
-        <div class="about-stats">
-          <div class="stat-card fade-in">
-            <i class="fas fa-clock"></i>
-            <h3>2+</h3>
-            <p>Years Experience</p>
-          </div>
-          <div class="stat-card fade-in">
-            <i class="fas fa-project-diagram"></i>
-            <h3>50+</h3>
-            <p>Projects Completed</p>
-          </div>
-          <div class="stat-card fade-in">
-            <i class="fas fa-heart"></i>
-            <h3>100%</h3>
-            <p>Client Satisfaction</p>
-          </div>
-          <div class="stat-card fade-in">
-            <i class="fas fa-coffee"></i>
-            <h3>24/7</h3>
-            <p>Available</p>
           </div>
         </div>
       </div>
