--- a/projects.html
+++ b/projects.html
@@ -300,6 +300,41 @@
          padding: 1.5rem;
        }
 
+       .project-title {
+         font-size: 1.3rem;
+       }
+
+       .project-description {
+         font-size: 0.9rem;
+         line-height: 1.5;
+       }
+
+       .project-tags {
+         gap: 0.4rem;
+       }
+
+       .project-tag {
+         font-size: 0.75rem;
+         padding: 0.3rem 0.6rem;
+       }
+
+       .project-link {
+         width: 100%;
+         justify-content: center;
+         padding: 0.875rem 1.5rem;
+         font-size: 1rem;
+       }
+
+       .project-links {
+         flex-direction: column;
+         gap: 0.75rem;
+       }
+
+       .category-title {
+         font-size: 1.8rem;
+         margin-bottom: 1.5rem;
+       }
+
        .back-btn {
          top: 1rem;
          left: 1rem;
@@ -320,6 +355,55 @@
          width: 45px;
          height: 45px;
          font-size: 1.3rem;
+       }
+
+       .index-info h4 {
+         font-size: 1rem;
+       }
+
+       .index-info p {
+         font-size: 0.85rem;
+       }
+
+       .projects-index {
+         padding: 2rem 0;
+       }
+
+       .index-title {
+         font-size: 1.3rem;
+         margin-bottom: 1.5rem;
+       }
+     }
+
+     @media (max-width: 480px) {
+       .project-card {
+         padding: 1.25rem;
+       }
+
+       .project-title {
+         font-size: 1.2rem;
+       }
+
+       .project-description {
+         font-size: 0.85rem;
+       }
+
+       .project-icon {
+         font-size: 2rem;
+       }
+
+       .category-title {
+         font-size: 1.6rem;
+       }
+
+       .index-category {
+         padding: 1rem;
+       }
+
+       .index-icon {
+         width: 40px;
+         height: 40px;
+         font-size: 1.2rem;
        }
      }
   </style>
