--- a/education.html
+++ b/education.html
@@ -32,7 +32,7 @@
       border-radius: 8px;
       text-decoration: none;
       backdrop-filter: blur(10px);
-      transition: all 0.3s ease;
+      transition: all 0.3s ease, opacity 0.3s ease;
       z-index: 1000;
     }
 
