--- a/education.html
+++ b/education.html
@@ -205,14 +205,18 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
-      <div class="footer-content">
+      <div class="footer-content fade-in">
         <div class="footer-text">
           <p>&copy; 2025 Aditya Srivastava. All rights reserved.</p>
-          <p>Made with <i class="fas fa-heart"></i> by Aditya Srivastava</p>
+          <p>Made with <i class="fas fa-heart"></i> by Adi</p>
         </div>
         <div class="footer-social">
-          <a href="https://www.linkedin.com/in/adityans17/" class="social-link" target="_blank" title="Connect on LinkedIn"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/Aditya746" class="social-link" target="_blank" title="View GitHub Profile"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/adityans17/" class="social-link" target="_blank" title="Connect on LinkedIn">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/Aditya746" class="social-link" target="_blank" title="View GitHub Profile">
+            <i class="fab fa-github"></i>
+          </a>
         </div>
       </div>
     </div>
