--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <span>Amsterdam, Netherlands</span>
         </a>
       </div>
-      <p class="hero-description animate-description">Currently leading initiatives to manage and improve technology at ING across the globe.</p>
+      <p class="hero-description animate-description">Currently leading initiatives to manage, build and improve technology at ING</p>
       <div class="hero-buttons animate-buttons">
         <a href="#contact" class="btn btn-primary">Get in Touch</a>
         <a href="#about" class="btn btn-secondary">About Me</a>
@@ -138,11 +138,11 @@
             <img src="self_icon.jpeg" alt="Aditya Srivastava" class="profile-image" loading="lazy">
           </div>
           <div class="about-text">
-            <p>Hey there, I'm Aditya Srivastava, aka Adi 👋</p>
-            <p>Born and raised in India, now navigating life from Amsterdam, Netherlands. I'm 26 and, while IT engineering is what I do professionally, it's just one facet of who I am.</p>
-            <p>I'm endlessly curious—about how systems work, sure, but also about people, places, and stories. Whether I'm deep in a gaming session, sweating it out at the gym, or lost in the layered worlds of music and cinema, I'm fueled by a passion for new experiences that move and inspire me.</p>
-            <p>Travel keeps me grounded and open-minded, and I love how different cultures shift your perspective. I'm all about trying new things, even if it means failing and laughing through it.</p>
-            <p>As someone who appreciates latest in tech, I value thoughtful design—not just in what we build, but in how we live with it. Life's better when it's collaborative, creative, and just a little more adventurous. One day at a time.</p>
+            <p>Hi, I'm Aditya Srivastava, but you can call me Adi. 👋 </p>
+            <p>This website began as a late-night coding project, born out of curiosity and a love for creating something from scratch.</p>
+            <p>Originally from India, I now call Amsterdam, Netherlands, home. At 26, I'm an engineer by trade, but my interests stretch far beyond code. I'm fascinated by how things work— be it complex systems, or people, or places and the stories that connect them. Whether I'm diving into a video game, pushing my limits at the gym, or getting lost in the rich worlds of art, music and films, I'm driven by experiences that spark inspiration and growth.</p>
+            <p>Travel is my way of staying grounded and open. Exploring new cultures and perspectives is a reminder of how vast and varied the world is. I'm always up for trying something new, even if it means stumbling, laughing, and learning along the way.</p>
+            <p>As a tech enthusiast, I'm drawn to thoughtful design—not just in the products we create, but in the way we live with them. I believe in collaboration, creativity, and embracing adventure - one day at a time.</p>
             <div class="about-tags">
               <span class="tag"><i class="fas fa-shield-alt"></i> Technology</span>
               <span class="tag"><i class="fas fa-rocket"></i> Performance</span>
