--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="experience.html" class="nav-link">Experience</a></li>
         <li><a href="education.html" class="nav-link">Education</a></li>
         <li><a href="certifications.html" class="nav-link">Certifications</a></li>
+        <li><a href="misc.html" class="nav-link">Miscellaneous</a></li>
       </ul>
       <div class="nav-actions">
         <a
@@ -118,6 +119,9 @@
       <div class="clock-container">
         <div class="clock-time" id="clock-time">--:--:--</div>
         <div class="clock-date" id="clock-date">-- --- ----</div>
+      </div>
+      <div class="weather-widget" id="weather-widget">
+        <div class="weather-loading">Loading weather...</div>
       </div>
     </div>
     </div>
